tests/snapshots/examples_fixtures/type_system__09_static_propagation_success.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/09_static_propagation_success.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/09_static_propagation_success.flx:13:1
   |
13 | print("#{double(copy)} / #{double(confirmed)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/09_static_propagation_success.flx:13:1
   |
13 | print("#{double(copy)} / #{double(confirmed)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
